--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 
 body {
-  background-color: #E41B1F;
+  background-color: #e41b1f;
   color: #d3d3d3;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   padding: 0 2rem 2rem;
 
@@ -30,20 +31,27 @@ img {
 
 div.content {
   background-color: #525252;
-  
+
   border: none;
   border-radius: 0.75rem;
-  padding: 1rem 2rem 2rem;
+  padding: 0.5rem 1rem 1rem;
 
   width: 45%;
 
   margin: 0 auto;
 
   text-align: center;
+
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+
+div.content:hover {
+  transform: scale(1.03);
+  filter: brightness(1.1);
 }
 
 @media (max-width: 900px) {
-
   .mainContent {
     gap: 2rem;
   }
